erDiagram
    USERS ||--o{ BOOKINGS : "makes"
    ROOMS ||--o{ BOOKINGS : "is_booked_in"
    ROOMS ||--o{ ROOM_EXTRAS : "has"
    BOOKINGS ||--|| BOOKING_GUEST_DETAILS : "contains"
    PAGES

    USERS {
        int id PK
        string email UK
        string password_hash
        datetime created_at
    }

    ROOMS {
        int id PK
        string title
        text description
        decimal price_per_night
        int capacity
        string image_path
    }

    ROOM_EXTRAS {
        int room_id FK
        string extra_type
    }

    BOOKINGS {
        int id PK
        int user_id FK
        int room_id FK
        date check_in
        date check_out
        string status
        decimal total_price
    }

    BOOKING_GUEST_DETAILS {
        int booking_id FK
        string first_name
        string last_name
        string email
        boolean breakfast
    }

    PAGES {
        string slug PK
        string title
        text content
        datetime updated_at
    }